# simple-chat

./: Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
backend/: pyproject.toml
backend/src/: redis_client.py  routes.py  utils.py  websocket_utils.py
backend/src/chat/: connection.py  exceptions.py  states.py  storage.py  stream.py
backend/src/session/: storage.py
frontend/: index.html  script.js
src/: app.py  data_handlers.py  redis_client.py  routes.py  routes_dependencies.py  utils.py  websocket_utils.py
src/base/: exceptions.py  redis.py
src/chat/: chat.py  connection.py  messages_router.py  router.py  states.py  storage.py  stream.py  utils.py
src/session/: death_dispatcher.py  dispatcher.py  exceptions.py  storage.py  stream.py  utils.py
